[package]
name = "common"
version = "0.1.0"
authors = ["malefooo <784479660@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wee_alloc = "0.4"
quick-protobuf = {version = "0.8.0", default-features = false}
digest = "0.9.0"
sha2 = {version = "0.9.2",  default-features = false}