[package]
name = "contract"
version = "0.1.0"
authors = ["tiannian <dtiannian@aliyun.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib] 
crate-type = ["cdylib"] 

[dependencies]
mw-std = {path = "../../marrow/mw-std"}
mw-rt = {path = "../../marrow/mw-rt"}
quick-protobuf = {version = "0.8.0", default-features = false}
wee_alloc = "0.4"
lazy_static = {version = "1.4.0", features = ["spin_no_std"]}
async-trait = "0.1.42"
common = {path = "../common"}

[build-dependencies]
pb-rs = "0.9.1"
protobuf-codegen-pure = "2.18.1"