[package]
name = "keystore"
version = "0.1.0"
authors = ["tiannian <dtiannian@aliyun.com>"]
edition = "2018"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib] 
crate-type = ["cdylib"] 

[dependencies]
mw-rt = { git = "https://github.com/Curdata-project/marrow", branch = "dev"}
mw-std = { git = "https://github.com/Curdata-project/marrow", branch = "dev"}
# mw-rt = { path = "../../marrow/mw-rt"}
# mw-std = {path = "../../marrow/mw-std"}
wee_alloc = "0.4"
quick-protobuf = {version = "0.8.0", default-features = false}
hex = { version = "0.4", default-features = false }
ed25519-dalek = {version = "1.0.1", default-features = false, features = ["u32_backend"]}
digest = "0.9.0"
sha2 = {version = "0.9.2",  default-features = false}
generic-array = "0.14.4"
hmac-sha512 = "0.1.8"
c2-chacha = {vsersion = "0.3.0", default-features = false, features = ["rustcrypto_api"]}
lazy_static = {version = "1.4.0", features = ["spin_no_std"]}
async-trait = "0.1.42"
common = {path = "../common"}

[build-dependencies]
pb-rs = "0.9.1"
protobuf-codegen-pure = "2.18.1"