[package]
name = "state"
version = "0.1.0"
authors = ["tiannian <dtiannian@aliyun.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib] 
crate-type = ["cdylib"] 

[dependencies]
mw-rt = { git = "https://github.com/Curdata-project/marrow", branch = "dev"}
mw-std = { git = "https://github.com/Curdata-project/marrow", branch = "dev"}
wee_alloc = "0.4"
quick-protobuf = {version = "0.8.0", default-features = false}
digest = "0.9.0"
sha2 = {version = "0.9.2",  default-features = false}

[build-dependencies]
pb-rs = "0.9.1"
protobuf-codegen-pure = "2.18.1"
