[package]
name = "transaction"
version = "0.1.0"
authors = ["tiannian <dtiannian@aliyun.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib] 
crate-type = ["cdylib"] 

[dependencies]
mw-rt = { git = "https://github.com/Curdata-project/marrow"}
wee_alloc = "0.4"
